# plugin_H264

./: .gitignore  .gitmodules  BUILD_GUIDE.md  CMakeLists.txt  DEVELOPMENT_COMPLETE.md  PROJECT_COMPARISON.md  README.md  SOLAR2D_TESTING_GUIDE.md  URGENT_REVIEW_REPORT.md  test_lua_binding.lua  test_menu.sh  test_real_video.lua  test_solar2d_simulation.lua
.claude/: settings.local.json
.github/: README.md
.github/workflows/: build.yml  quality.yml  solar2d-build.yml  solar2d-publish.yml
android_build/: build.gradle
android_build/src/main/: AndroidManifest.xml
android_build/src/main/java/com/plugin/h264/: H264DecoderService.java
docs/: 多线程实现原理分析.md  开发计划-验证版.md  执行计划-技术验证版.md  技术分析报告.md  测试用例设计.md  测试计划-详细版.md  设计规范文档.md  详细设计文档-验证版.md  验收标准-标准化版.md
examples/solar2d_project/: .CoronaLiveBuild  README.md  build.settings  config.lua  main.lua  movie_rect.lua
examples/solar2d_project/lib/system/: middleclass_ext.lua
include/decoders/: AACDecoder.h  H264Decoder.h  MP4Demuxer.h
include/lua/: CoronaEvent.h  CoronaLua.h  CoronaMacros.h  CoronaTypes.h  H264TextureBinding.h  PluginLuaBinding.h
include/managers/: DecoderManager.h  H264Movie.h
include/utils/: Common.h  ErrorHandler.h
mac/: build.sh
plugins/2020.3620/android/: metadata.lua  plugin.h264.aar
plugins/2020.3620/iphone-sim/: metadata.lua
plugins/2020.3620/mac-sim/: metadata.lua
plugins/2020.3620/win32-sim/: metadata.lua
plugins/2020.3627/mac-sim/: plugin_h264.dylib
scripts/: build-plugin.sh
shared/: CoronaMinimal.cpp  plugin_h264.lua
src/: .gitignore
src/android/: build.sh  build_thrid_party_libs.sh  metadata.lua
src/android/jni/: Android.mk  Application.mk
src/decoders/: AACDecoder.cpp  H264Decoder.cpp  MP4Demuxer.cpp
src/ios/: build.sh  build_thrid_party_libs.sh
src/ios/Plugin.xcodeproj/: project.pbxproj
src/ios/Plugin.xcodeproj/xcshareddata/xcschemes/: webp.xcscheme
src/lua/: CoronaLua.cpp  CoronaMinimal.cpp  H264TextureBinding.cpp  PluginLuaBinding.cpp.bak
src/mac/: build.sh  build_third_party_libs.sh  start_simulator.sh
src/mac/Plugin.xcodeproj/: project.pbxproj
src/mac/Plugin.xcodeproj/project.xcworkspace/xcuserdata/bc.xcuserdatad/: UserInterfaceState.xcuserstate
src/mac/Plugin.xcodeproj/xcshareddata/xcschemes/: plugin_h264.xcscheme
src/mac/Plugin.xcodeproj/xcuserdata/bc.xcuserdatad/xcschemes/: xcschememanagement.plist
src/managers/: DecoderManager.cpp  H264Movie.cpp
src/shared/: plugin_h264.lua
src/shared/include/: CoronaGraphics.h  CoronaLog.h  CoronaMacros.h
src/shared/include/decoders/: AACDecoder.h  FFmpegH264Decoder.h  H264Decoder.h  MP4Demuxer.h
src/shared/include/lua/: H264TextureBinding.h
src/shared/include/managers/: DecoderManager.h  H264Movie.h
src/shared/include/utils/: Common.h  CoronaLua.h  ErrorHandler.h
src/shared/src/decoders/: AACDecoder.cpp  FFmpegH264Decoder.cpp  H264Decoder.cpp  MP4Demuxer.cpp
src/shared/src/lua/: H264TextureBinding.cpp
src/shared/src/managers/: DecoderManager.cpp  H264Movie.cpp
src/shared/src/utils/: CoronaLog.cpp  ErrorHandler.cpp  MiniMP4Implementation.cpp
src/utils/: MiniMP4Implementation.cpp
tests/: CMakeLists.txt  run_tests.sh
tests/integration/: test_plugin_integration.lua
tests/unit/: test_error_handler.cpp  test_h264_decoder.cpp
validation/: README.md  VALIDATION_SUMMARY.md
validation/fdkaac_test/: CMakeLists.txt  test_fdkaac_api.cpp
validation/minimp4_test/: CMakeLists.txt  test_minimp4_api.cpp
validation/openh264_test/: CMakeLists.txt  test_openh264_api.cpp
